--- a/redis/redis.config-map.yaml
+++ b/redis/redis.config-map.yaml
@@ -8,3 +8,6 @@ data:
     bind 0.0.0.0
     protected-mode yes
     port 6379
+    cluster-enabled yes
+    cluster-node-timeout 5000
+    appendonly yes
